fix: modify align property

--- a/src/features/about-me/components/molecules/pixel-art-scene-my-goals/types/styles/primary-scene.css
+++ b/src/features/about-me/components/molecules/pixel-art-scene-my-goals/types/styles/primary-scene.css
@@ -27,7 +27,7 @@
                 &:nth-child(4) {
                     grid-column: 4;
                     grid-row: 3;
-                    justify-self: end;
+                    margin-top: auto;
                 }
 
                 &:nth-child(5) {
